[package]
name = "rqlite_client"
version = "0.0.1-alpha.9"
authors = ["Markus Kolb"]
description = "rqlite database client with optional extra convenience"
documentation = "https://docs.rs/rqlite_client/"
homepage = "https://github.com/kolbma/rs_rqlite_client/"
repository = "https://github.com/kolbma/rs_rqlite_client/"
license = "LGPL-2.1-only"
edition = "2021"
rust-version = "1.67.0"
publish = true
keywords = ["rqlite", "database", "sql", "migration"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
# minimum supported rust version 1.67.0 - crate time dependency
msrv = "1.67.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
lazy_static = { version = "1.4.0" }
log = { version = "0.4.20", optional = true }
percent-encoding = { version = "2.3.0", default-features = false, optional = true }
ureq = { version = "2.8.0", default-features = false, features = [
    "gzip",
    "json",
], optional = true }
rust-embed = { version = "8.0.0", features = ["compression"], optional = true }
serde = { version = "1.0.188", default-features = false, features = [
    "serde_derive",
] }
serde_json = { version = "1.0.107" }
tracing = { version = "0.1.37", optional = true }
url = { version = "2.4.1", optional = true }

[dev-dependencies]
time = { version = "0.3.29", features = ["formatting"] }

[build-dependencies]
httpdate = { version = "1.0.3" }

[features]
default = ["monitor", "ureq", "url"]
log = ["dep:log"]
migration = []
migration_embed = ["migration", "dep:rust-embed"]
monitor = []
percent_encoding = ["dep:percent-encoding"]
tracing = ["dep:tracing"]
ureq = ["dep:ureq"]
ureq_charset = ["ureq", "ureq/charset"]
ureq_socks_proxy = ["ureq", "ureq/socks-proxy"]
ureq_tls = ["ureq", "ureq/tls", "ureq/native-certs"]
ureq_webpki = ["ureq", "ureq/tls"]
url = ["dep:url"]
