[package]
name = "rqlite_client"
version = "0.0.1-alpha.14"
authors = ["Markus Kolb"]
description = "rqlite database client with optional extra convenience"
documentation = "https://docs.rs/rqlite_client/"
homepage = "https://github.com/kolbma/rs_rqlite_client/"
repository = "https://github.com/kolbma/rs_rqlite_client/"
license = "LGPL-2.1-only"
edition = "2021"
rust-version = "1.67.0"
publish = true
keywords = ["rqlite", "database", "sql", "migration"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
# minimum supported rust version 1.67.0 - crate time dependency
msrv = "1.67.0"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
lazy_static = { version = "1.4.0" }
log = { version = "0.4.20", optional = true }
percent-encoding = { version = "2.3.1", default-features = false, optional = true }
ureq = { git = "https://github.com/kolbma/ureq.git", branch = "no_hootbin", features = [
    "gzip",
    "json",
], optional = true }
# ureq = { version = "2.8.0", default-features = false, features = [
#     "gzip",
#     "json",
# ], optional = true }
rust-embed = { version = "8.2.0", features = ["compression"], optional = true }
serde = { version = "1.0.196", default-features = false, features = [
    "serde_derive",
] }
serde_json = { version = "1.0.113" }
tracing = { version = "0.1.40", optional = true }
url = { version = "2.5.0", optional = true }

[dev-dependencies]
test_rqlited = { path = "./test_rqlited", features = ["url"] }
time = { version = "0.3.34", features = ["formatting"] }

[build-dependencies]
httpdate = { version = "1.0.3" }

[features]
default = ["monitor", "ureq", "url"]
log = ["dep:log"]
migration = []
migration_embed = ["migration", "dep:rust-embed"]
monitor = []
percent_encoding = ["dep:percent-encoding"]
tracing = ["dep:tracing"]
ureq = ["dep:ureq"]
ureq_charset = ["ureq", "ureq/charset"]
ureq_socks_proxy = ["ureq", "ureq/socks-proxy"]
ureq_tls = ["ureq", "ureq/tls", "ureq/native-certs"]
ureq_webpki = ["ureq", "ureq/tls"]
url = ["dep:url"]

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
rust-2021-compatibility = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macros = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
