[package]
name = "rqlite_client"
version = "0.0.1-alpha.16"
authors = ["Markus Kolb"]
description = "rqlite database client with optional extra convenience"
documentation = "https://docs.rs/rqlite_client/"
homepage = "https://github.com/kolbma/rs_rqlite_client/"
repository = "https://github.com/kolbma/rs_rqlite_client/"
license = "LGPL-2.1-only"
edition = "2021"
rust-version = "1.71.1"
publish = true
keywords = ["rqlite", "database", "sql", "migration"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
# minimum supported rust version 1.71.1 - crate ureq dependency with: cargo update -p idna_adapter --precise 1.1.0
msrv = "1.71.1"
unused-deps.allow = ["idna_adapter"]

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# idna_adapter = { version = "=1.1.0", optional = true }
log = { version = "0.4.27", optional = true }
percent-encoding = { version = "2.3.2", default-features = false, optional = true }
ureq = { git = "https://github.com/kolbma/ureq.git", branch = "2.x", version = "2.12.1", features = [
    "gzip",
    "json",
], optional = true }
# ureq = { version = "2.8.0", default-features = false, features = [
#     "gzip",
#     "json",
# ], optional = true }
rust-embed = { version = "8.7.2", features = ["compression"], optional = true }
serde = { version = "1.0.219", default-features = false, features = [
    "serde_derive",
] }
serde_json = { version = "1.0.143" }
tracing = { version = "0.1.41", optional = true }
url = { version = "2.5.6", optional = true }

[dev-dependencies]
test_rqlited = { path = "./test_rqlited", features = ["url"] }
time = { version = "0.3.41", features = ["formatting"] }

[build-dependencies]
httpdate = { version = "1.0.3" }

[patch.crates-io]
idna_adapter = { git = "https://github.com/hsivonen/idna_adapter", branch = "unicode-rs" }

[features]
default = ["monitor", "ureq", "url"]
log = ["dep:log"]
migration = []
migration_embed = ["migration", "dep:rust-embed"]
monitor = []
percent_encoding = ["dep:percent-encoding"]
tracing = ["dep:tracing"]
ureq = ["dep:ureq"]
ureq_charset = ["ureq", "ureq/charset"]
ureq_socks_proxy = ["ureq", "ureq/socks-proxy"]
ureq_tls = ["ureq", "ureq/tls", "ureq/native-certs"]
ureq_webpki = ["ureq", "ureq/tls"]
url = ["dep:url"]

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
rust-2021-compatibility = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macros = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
