[package]
name = "test_rqlited"
version = "0.2.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.5.0" }
rqlite_client = { path = "../../rs_rqlite_client" }
url = { version = "2.5.4", optional = true }

[features]
url = ["dep:url"]
