[package]
name = "test_rqlited"
version = "0.2.3"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rqlite_client = { path = "../../rs_rqlite_client", default-features = false, features = ["monitor", "ureq"]}
url = { version = "2.5.6", optional = true }

[features]
url = ["dep:url", "rqlite_client/url"]
