[package]
name = "test_rqlited"
version = "0.2.4"
edition = "2021"
rust-version = "1.71.1"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
msrv = "1.71.1"

[dependencies]
rqlite_client = { path = "../../rs_rqlite_client", default-features = false, features = [
    "monitor",
] }
url = { version = "2.5.6", optional = true }

[features]
url = ["dep:url", "rqlite_client/url"]
